--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,22 @@
-python-telegram-bot==20.3
+anyio==4.8.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
+h11==0.14.0
+httpcore==0.16.3
+httpx==0.23.3
+idna==3.6
+numpy==2.2.1
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+python-telegram-bot==20.0
+pytz==2024.2
 requests==2.31.0
+rfc3986==1.5.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.5
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.1
